--- a/filosofia/index.html
+++ b/filosofia/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Atocha Administración Integral</title>
+		<title>Atocha - Filosofía</title>
 		<link rel="shortcut icon" type="image/png" href="../images/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
