--- a/contacto/index.html
+++ b/contacto/index.html
@@ -9,17 +9,17 @@
 		<link rel="stylesheet" type="text/css" href="../css/page.css?v=1.0.0">
 		<script type="text/javascript" src="../js/page.js?v=1.0.0"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<!--meta name="title" content="Zindra Beauty & Dress Shop - Catalogos">
-		<meta name="description" content="Zindra Beauty & Dress Shop - Catalogos">
-		<meta name="og:title" content="Zindra Beauty & Dress Shop - Catalogos">
-		<meta name="og:description" content="Zindra Beauty & Dress Shop - Catalogos">
-		<meta name="og:image" content="https://angelglezz.github.io/catalogo/images/new-share.png">
-		<meta name="og:url" content="https://angelglezz.github.io/catalogo/">
+		<meta name="title" content="Atocha Administración Integral">
+		<meta name="description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación">
+		<meta name="og:title" content="Atocha Administración Integral">
+		<meta name="og:description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación">
+		<meta name="og:image" content="https://administracion-atocha.com/images/share.png">
+		<meta name="og:url" content="https://administracion-atocha.com">
 		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:image:src" content="https://angelglezz.github.io/catalogo/images/new-share.png/">
-		<meta name="twitter:description" content="Zindra Beauty & Dress Shop - Catalogos" />
-		<meta name="twitter:url" content="https://angelglezz.github.io/catalogo/" />
-		<meta name="twitter:domain" content="https://angelglezz.github.io/catalogo/" /-->
+		<meta name="twitter:image:src" content="https://administracion-atocha.com/images/share.png/">
+		<meta name="twitter:description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación" />
+		<meta name="twitter:url" content="https://administracion-atocha.com" />
+		<meta name="twitter:domain" content="https://administracion-atocha.com" />
 		<style>
 			html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
 				background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
