add service section

--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../css/page.css?v=1.0.0">
+		<link rel="stylesheet" type="text/css" href="../css/page.css?v=1.0.1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<meta name="title" content="Atocha Administración Integral">
 		<meta name="description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación">
@@ -58,6 +58,153 @@
 				  	</div>
 				</div>
 			</nav>
+			<div id="section-us">
+				<div class="page-title">Sobre Nosotros</div>
+				<div class="contacto-txt">
+					En Atocha, Administración Integral, nos dedicamos a la administración integral de condominios con un enfoque en la excelencia y la satisfacción de nuestros clientes. Con años de experiencia y un equipo altamente calificado, ofrecemos soluciones personalizadas para garantizar que su comunidad se mantenga en las mejores condiciones. Trabajamos de la mano con socios comerciales confiables para proporcionar servicios de calidad, permitiéndole disfrutar de la tranquilidad de saber que nosotros nos encargamos de todo.
+				</div>
+			</div>
+			<div id="section-service">
+				<div class="page-title">Nuestros Servicios</div>
+				<div class="accordion" id="accordionExample">
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								<div class="filosofia-item-title">Administración</div>
+							</button>
+						</h2>
+						<div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								Nos ocupamos de todas las operaciones administrativas del condominio, desde la gestión financiera hasta la coordinación de servicios y la atención a los residentes. Nuestro objetivo es asegurar un funcionamiento fluido y eficiente de la comunidad, liberándole de preocupaciones.<br><br>
+								<ul>
+									<li>Gestión financiera y contabilidad.</li>
+									<li>Coordinación de reuniones y asambleas.</li>
+									<li>Supervisión de personal y servicios.</li>
+									<li>Implementación y cumplimiento de normas y reglamentos.</li>
+									<li>Atención y comunicación personalizada a residentes y propietarios.</li>
+									<li>Asignación de un Administrador Residente exclusivo (sin rotación), en horario laboral.</li>
+									<li>Custodiar el “Libro de Actas” donde se lleven los registros de cada asamblea.</li>
+									<li>Atención a la situación de morosidad.</li>
+								</ul>
+								Nos aseguramos de mantener una comunicación clara y constante con todos los residentes, promoviendo una comunidad armoniosa y bien organizada.<br><br>
+								No manejamos su dinero, lo administramos. El flujo económico queda a resguardo del Comité de Vigilancia. Cualquier obra mayor o gasto generado por mejoras, se propone a la Asamblea, ellos deciden, lo vigila el Comité de Vigilancia de la Unidad y nosotros lo supervisamos y nos encargamos de lograr el objetivo. Contamos con certificación actualizada en Procuraduría Social (PROSOC).
+							</div>
+							<div class="cover-inter" style="background-image: url(../images/admin-service.png);"></div>
+					  	</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								<div class="filosofia-item-title">Limpieza</div>
+							</button>
+						</h2>
+						<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+							<div class="accordion-body accordion-body-mid">
+								<div class="presentacion-container">
+									<div class="presentacion-txt">
+										Entendemos la importancia de mantener espacios limpios y saludables. Ofrecemos servicios de limpieza adaptados a las necesidades específicas de cada cliente. Limpieza profunda y regular de áreas comunes. <br><br>
+										<ul>
+											<li>Servicio de limpieza de áreas comunes en comdominios y plazas comerciales</li>
+											<li>Servicio de limpieza de oficinas y locales comerciales.</li>
+											<li>Limpieza especializada para eventos y emergencias.</li>
+										</ul>
+									</div>
+								</div>
+								<div class="presentacion-container presentacion-diferente">
+									<div class="presentacion-inner-img" style="background-image: url(../images/clean-mid.png);"></div>
+								</div>
+							</div>
+							<div class="cover-inter" style="background-image: url(../images/clean-service.png);"></div>
+					  	</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseOne">
+								<div class="filosofia-item-title">Seguridad</div>
+							</button>
+						</h2>
+						<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								Trabajamos con proveedores de seguridad de primer nivel para implementar sistemas avanzados y proporcionar personal capacitado. Garantizamos la protección de los residentes y sus bienes con una vigilancia constante y una gestión de accesos efectiva. Para tranquilidad de todos los condóminos, garantizamos la más minuciosa y estricta supervisión con la más alta calidad y amplia experiencia que Atocha, Administración Integral ofrece en todos sus servicios.
+							</div>
+							<div class="cover-inter" style="background-image: url(../images/security-service.png);"></div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
+								<div class="filosofia-item-title">Mantenimiento</div>
+							</button>
+						</h2>
+						<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+							<div class="accordion-body accordion-body-mid">
+								<div class="presentacion-container">
+									<div class="presentacion-txt">
+										Ofrecemos servicios de mantenimiento preventivo y correctivo en colaboración con técnicos especializados. Nos encargamos de solucionar cualquier problema técnico de manera rápida y eficiente, preservando la infraestructura y las instalaciones del condominio en óptimas condiciones. <br><br>
+										<ul>
+											<li>Pronta respuesta a imprevistos.</li>
+											<li>Mantenimiento y reparación de elevadores y sistemas eléctricos</li>
+											<li>Mantenimiento y reparación de sistemas de bombeo.</li>
+											<li>Servicios de pintura y renovación.</li>
+											<li>Inspecciones periódicas para detectar y solucionar problemas antes de que se conviertan en grandes inconvenientes.</li>
+										</ul>
+									</div>
+								</div>
+								<div class="presentacion-container presentacion-diferente">
+									<div class="presentacion-inner-img" style="background-image: url(../images/mantto-mid.png);"></div>
+								</div>
+							</div>
+							<div class="cover-inter" style="background-image: url(../images/mantto-service.png);"></div>
+					  	</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseOne">
+								<div class="filosofia-item-title">Fumigación</div>
+							</button>
+						</h2>
+						<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								Asociados con empresas de fumigación certificadas, mantenemos los espacios libres de plagas, utilizando métodos y productos seguros y eficaces para proteger la salud y el bienestar de todos los residentes. Para tranquilidad de todos los condóminos, garantizamos la más minuciosa y estricta supervisión con la más alta calidad y amplia experiencia que Atocha, Administración Integral ofrece en todos sus servicios.
+							</div>
+							<div class="cover-inter" style="background-image: url(../images/fumigacion-service.png);"></div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseTwo">
+								<div class="filosofia-item-title">Jardinería</div>
+							</button>
+						</h2>
+						<div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+							<div class="accordion-body accordion-body-mid">
+								<div class="presentacion-container">
+									<div class="presentacion-txt">
+										Las áreas verdes son el corazón de cualquier comunidad, y nuestro objetivo es mantenerlas en perfectas condiciones. <br><br>
+										<ul>
+											<li>Mantenimiento de jardines y áreas verdes.</li>
+											<li>Servicios de poda y cuidado de plantas.</li>
+											<li>Limpieza y recolección de residuos vegetales.</li>
+										</ul>
+									</div>
+								</div>
+								<div class="presentacion-container presentacion-diferente">
+									<div class="presentacion-inner-img" style="background-image: url(../images/garden-mid.png);"></div>
+								</div>
+							</div>
+							<div class="cover-inter" style="background-image: url(../images/garden-service.png);"></div>
+					  	</div>
+					</div>
+				</div>
+			</div>
+			<div id="easy-section">
+				<div class="filosofia-item-title">Tranquilidad Garantizada</div>
+				<div class="gold-line"></div>
+                <div class="txt-mid-text">
+                    En Atocha, Administración Integral, entendemos la importancia de vivir en un entorno seguro y en óptimas condiciones. Es por eso que nos comprometemos a supervisar minuciosamente todos los servicios proporcionados por nuestros socios comerciales. Usted puede estar tranquilo sabiendo que nos encargamos de cada detalle, permitiéndole disfrutar de su hogar sin preocupaciones. <br><br>
+					Contáctenos hoy mismo para descubrir cómo podemos mejorar la calidad de vida en su comunidad a través de una administración integral y servicios de alta calidad.<br><br> <span>Para Atocha, Administración Integral, su tranquilidad es nuestra prioridad.</span>
+                </div>
+			</div>
 			<div class="footer">
 				© 2024 ATOCHA, Administración Integral
 			</div>
