--- a/index.html
+++ b/index.html
@@ -6,22 +6,43 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="./css/page.css?v=1.0.2">
+		<link rel="stylesheet" type="text/css" href="./css/page.css?v=1.0.0">
 		<script type="text/javascript" src="./js/page.js?v=1.0.1"></script>
 		<link rel="stylesheet" type="text/css" href="./css/slick-theme.css"/>
 		<link rel="stylesheet" type="text/css" href="./css/slick.css"/>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<meta name="title" content="Atocha Administración Integral">
-		<meta name="description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación">
-		<meta name="og:title" content="Atocha Administración Integral">
-		<meta name="og:description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación">
+		<meta name="title" content="Atocha, Administración Integral - Administración de Condominios en México">
+		<meta name="description" content="Atocha, Administración Integral ofrece servicios profesionales de administración, limpieza, mantenimiento, seguridad y fumigación para condominios en México. Confíe en nosotros para la supervisión y el cuidado integral de su propiedad.">
+		<meta name="og:title" content="Atocha, Administración Integral - Administración de Condominios en México">
+		<meta name="og:description" content="Atocha, Administración Integral ofrece servicios profesionales de administración, limpieza, mantenimiento, seguridad y fumigación para condominios en México. Confíe en nosotros para la supervisión y el cuidado integral de su propiedad.">
 		<meta name="og:image" content="https://administracion-atocha.com/images/share.png">
 		<meta name="og:url" content="https://administracion-atocha.com">
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:image:src" content="https://administracion-atocha.com/images/share.png/">
-		<meta name="twitter:description" content="Administración integral para tu condominio. Administración, Mantenimiento, Limpieza, Jardinería, Seguridad, Fumigación" />
+		<meta name="twitter:description" content="Atocha, Administración Integral ofrece servicios profesionales de administración, limpieza, mantenimiento, seguridad y fumigación para condominios en México. Confíe en nosotros para la supervisión y el cuidado integral de su propiedad." />
 		<meta name="twitter:url" content="https://administracion-atocha.com" />
 		<meta name="twitter:domain" content="https://administracion-atocha.com" />
+		<meta name="keywords" 
+				content="
+				Administración,
+				Condominios,
+				Edificios,
+				Plazas comerciales,
+				Limpieza,
+				Seguridad,
+				Fumigación,
+				Administración de condominios, 
+				Limpieza en condominios,
+				Mantenimiento en condominios,
+				Seguridad en condominios,
+				Fumigación en condominios,
+				Supervisión de servicios en condominios,
+				Administración integral de propiedades,
+				Servicios de limpieza para condominios,
+				Mantenimiento integral de edificios,
+				Servicios de seguridad en propiedades,
+				Control de plagas en condominios,
+				Supervisión de mantenimiento en edificios"/>
 		<style>
 			html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
 				background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -68,7 +89,7 @@
 			<div id="presentacion">
 				<div class="presentacion-container">
 					<div class="presentacion-txt">
-						<span class="bold">Bienvenido a Atocha, Administración Integral,</span> su socio de confianza para la administración integral de condominios. Nos especializamos en ofrecer una gama completa de servicios diseñados para mantener su comunidad segura, limpia y en buen estado. Desde la administración y mantenimiento hasta la limpieza, seguridad y fumigación, estamos comprometidos con la excelencia y la satisfacción de nuestros clientes. Descubra cómo podemos ayudar a mejorar la calidad de vida en su condominio con nuestros servicios personalizados y profesionales.
+						<h1 class="bold">Bienvenido a Atocha, Administración Integral,</h1> su socio de confianza para la administración integral de condominios. Nos especializamos en ofrecer una gama completa de servicios diseñados para mantener su comunidad segura, limpia y en buen estado. Desde la administración y mantenimiento hasta la limpieza, seguridad y fumigación, estamos comprometidos con la excelencia y la satisfacción de nuestros clientes. Descubra cómo podemos ayudar a mejorar la calidad de vida en su condominio con nuestros servicios personalizados y profesionales.
 						<br><br><span class="final-line">¡Permítanos cuidar de su hogar como si fuera el nuestro!</span>
 					</div>
 				</div>
